[gd_scene load_steps=4 format=3 uid="uid://bl4h68w8aypit"]

[ext_resource type="VideoStream" path="res://resources/goofyAhHeat.ogv" id="1_l1su7"]
[ext_resource type="Script" path="res://scripts/intro_scene.gd" id="1_oowg5"]
[ext_resource type="Theme" uid="uid://c1a13bhjblb2b" path="res://themes/skipButton.tres" id="3_rg8el"]

[node name="IntroScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oowg5")

[node name="HeatIntro" type="VideoStreamPlayer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 2688.0
offset_bottom = 1512.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
stream = ExtResource("1_l1su7")
autoplay = true
buffering_msec = 10

[node name="Skip" type="Button" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 548.0
offset_right = 285.0
offset_bottom = 644.0
theme = ExtResource("3_rg8el")
text = "SKIP"

[connection signal="finished" from="HeatIntro" to="." method="_on_heat_intro_finished"]
[connection signal="pressed" from="Skip" to="." method="_on_skip_pressed"]
